--- a/myxt/index.html
+++ b/myxt/index.html
@@ -1,1 +1,29 @@
-xxx
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>免疫系统PPT</title>
+    <style type="text/css">
+        body{
+            background-color: azure;
+        }
+        p{
+            text-align: left;
+            font-size: 30px;
+            color: black;
+        }
+        #r{
+            text-align: left;
+            font-size: 20px;
+            color: red;
+        }
+    </style>
+</head>
+<body>
+<p>下载“免疫系统”PPT</p>
+<p id="r">Tips:手机打开浏览器下载or电脑下载</p>
+<a href="https://fancc666.github.io/downloader/myxt/免疫系统.pptx" download="免疫系统.pptx">
+    <input type="button" value="点击按钮下载">
+</a>
+</body>
+</html>
