--- a/thyj/index.html
+++ b/thyj/index.html
@@ -1,1 +1,29 @@
-xxx
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>桃花源记PPT</title>
+    <style type="text/css">
+        body{
+            background-color: azure;
+        }
+        p{
+            text-align: left;
+            font-size: 30px;
+            color: black;
+        }
+        #r{
+            text-align: left;
+            font-size: 20px;
+            color: red;
+        }
+    </style>
+</head>
+<body>
+<p>下载“桃花源记”PPT</p>
+<p id="r">Tips:手机打开浏览器下载or电脑下载</p>
+<a href="https://fancc666.github.io/downloader/thyj/桃花源记.pptx" download="桃花源记.pptx">
+    <input type="button" value="点击按钮下载">
+</a>
+</body>
+</html>
