--- a/gtzc/index.html
+++ b/gtzc/index.html
@@ -1,1 +1,29 @@
-xxx
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>钢铁是怎样炼成的摘抄</title>
+    <style type="text/css">
+        body{
+            background-color: azure;
+        }
+        p{
+            text-align: left;
+            font-size: 30px;
+            color: black;
+        }
+        #r{
+            text-align: left;
+            font-size: 20px;
+            color: red;
+        }
+    </style>
+</head>
+<body>
+<p>下载《钢铁是怎样炼成的》摘抄作业</p>
+<p id="r">Tips:手机打开浏览器下载or电脑下载</p>
+<a href="https://fancc666.github.io/downloader/gtzc/《钢铁是怎样炼成的》好词好句摘抄.docx" download="《钢铁是怎样炼成的》好词好句摘抄.docx">
+    <input type="button" value="点击按钮下载">
+</a>
+</body>
+</html>
